--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
 							<article id="contact">
 								<h2 class="major">Personal Profile</h2>
 								<img src="images/mbti.png" alt="MBTI Test" height="550" width="550">
+								<p>This is a MBTI test show 16 personalities</p>
 								<img src="images/learning_styles.png" alt="Learning Styles" height="550" width="550">
 								
 								
