--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
 								<img src="images/mbti.png" alt="MBTI Test" height="550" width="550">
 								<p>This is a MBTI test show 16 personalities</p>
 								<img src="images/learning_styles.png" alt="Learning Styles" height="550" width="550">
+								<p>This test shows my preferred learning style. The result shows that my preferred learning style is Visual.</p>
 								
 								
 							</article>
