--- a/index.html
+++ b/index.html
@@ -67,6 +67,21 @@
 								<span class="image main"><img src="images/pic03.jpg" alt="" /></span>
 								<h3>Cyber Security Analyst</h3>
 								<p>A cyber security analyst is a job that detects and prevent cyber threads to an organisation. </p>
+								<p>Responsibilities: </p>
+								<ul>
+									<li>Plan, implement and upgrade security measures and controls</li>
+									<li>Establish plans and protocols to protect digital files and information systems</li>
+									<li>Maintain data and monitor security access</li>
+									<li>Perform vulnerability testing, risk analyses and security assessments</li>
+									<li>Conduct internal and external security audits</li>
+									<li>Anticipate security alerts, incidents and disasters and reduce their likelihood</li>
+									<li>Manage network, intrusion detection and prevention systems</li>
+									<li>Analyze security breaches to determine their root cause</li>
+									<li>Recommend and install appropriate tools and countermeasures</li>
+									<li>Define, implement and maintain corporate security policies</li>
+									<li>Train fellow employees in security awareness and procedures</li>
+									<li>Coordinate security plans with outside vendors</li>
+								</ul>
 							</article>
 
 						<!-- Contact -->
