--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@
 								<p>This is a MBTI test show 16 personalities</p>
 								<img src="images/learning_styles.png" alt="Learning Styles" height="550" width="550">
 								<p>This test shows my preferred learning style. The result shows that my preferred learning style is Visual.</p>
+								<img src="images/big5.png" alt="Big 5 Personality" height="550" width="550">
 								
 								
 							</article>
