--- a/index.html
+++ b/index.html
@@ -87,17 +87,20 @@
 							<article id="contact">
 								<h2 class="major">Personal Profile</h2>
 								<img src="images/mbti.png" alt="MBTI Test" height="550" width="550">
-								<p>This is a MBTI test show 16 personalities</p>
+								<img src="images/percentage.png" alt="Percentage" height="550" width="550">
+								<p>This is a MBTI test show 16 personalities. It says INTJ-T =
+								Introverted, Intuitive, Thinking, Judging, Turbulent. </p>
+
 								<img src="images/learning_styles.png" alt="Learning Styles" height="550" width="550">
 								<p>This test shows my preferred learning style. The result shows that my preferred learning style is Visual.</p>
 								<img src="images/big5.png" alt="Big 5 Personality" height="550" width="550">
 								<p>The Big 5 Personality test shows the 5 major dimensions of personality (OCEAN): </p>
 								<ul>
-									<li>Openness describes a person’s tendency to think in abstract, complex ways. High scorers tend to be creative, adventurous, and intellectual. They enjoy playing with ideas and discovering novel experiences. Low scorers tend to be practical, conventional, and focused on the concrete. They tend to avoid the unknown and follow traditional ways. </li>
-									<li>Conscientiousness describes a person’s ability to exercise self-discipline and control in order to pursue their goals. High scorers are organized and determined, and are able to forego immediate gratification for the sake of long-term achievement. Low scorers are impulsive and easily sidetracked. </li>
-									<li>Extraversion describes a person’s inclination to seek stimulation from the outside world, especially in the form of attention from other people. Extraverts engage actively with others to earn friendship, admiration, power, status, excitement, and romance. Introverts, on the other hand, conserve their energy, and do not work as hard to earn these social rewards.</li>
-									<li>Agreeableness describes a person’s tendency to put others’ needs ahead of their own, and to cooperate rather than compete with others. People who are high in Agreeableness experience a great deal of empathy and tend to get pleasure out of serving and taking care of others. They are usually trusting and forgiving.</li>
-									<li>Neuroticism describes a person’s tendency to experience negative emotions, including fear, sadness, anxiety, guilt, and shame. While everyone experiences these emotions from time to time, some people are more prone to them than others.</li>
+									<li>Openness</li>
+									<li>Conscientiousness</li>
+									<li>Extraversion</li>
+									<li>Agreeableness</li>
+									<li>Neuroticism</li>
 								</ul>
 								<a href="https://www.truity.com/personality-test/13683/test-results/8707025">https://www.truity.com/personality-test/13683/test-results/8707025</a>
 								
@@ -106,7 +109,12 @@
 
 						<!-- Elements -->
 							<article id="elements">
-								<h2 class="major">Project Ideas</h2>
+								<h2 class="major">Project Ideas</h2> 
+								<p>I'm going to create a project called "Search by Music". It's a search engine, but to find a specific music. It will recognize the audio that being recorded and will find the music that match from the recording. It's almost similar with Search by Voice by Google, but it's more specific only for finding specific music that we heard but we don't know the song title</p>
+
+								<p>Some people may heard some good song in radio, television, or maybe pass by a street musician and hear some good songs that they don't know the title.</p>
+
+								<p>This program also detects which key that the song is being played, the tempo, and also give the details of the song. This include which album the song is included, the duration, release date,  </p>
 
 								
 
