Personal idea update

--- a/index.html
+++ b/index.html
@@ -110,11 +110,24 @@
 						<!-- Elements -->
 							<article id="elements">
 								<h2 class="major">Project Ideas</h2> 
-								<p>I'm going to create a project called "Search by Music". It's a search engine, but to find a specific music. It will recognize the audio that being recorded and will find the music that match from the recording. It's almost similar with Search by Voice by Google, but it's more specific only for finding specific music that we heard but we don't know the song title</p>
+								<!-- Overview (100 Words) -->
+								<p>I'm going to create a project called "Search by Music". It's a search engine, but to find a specific music. It will recognize the audio that being recorded and will find the music that match from the recording. It's almost similar with Search by Voice by Google, but it's more specific only for finding specific music that we heard but we don't know the song title. </p>
 
-								<p>Some people may heard some good song in radio, television, or maybe pass by a street musician and hear some good songs that they don't know the title.</p>
+								<!-- Motivation (100 words) -->
+								<p>Music is a product of an art that results in a form of sound. There are many genres of music in this world. Everybody loves music. Even you are not a musician, you still listen to music, when on the train, for studying, etc. In this era, it is easier to get music, for example is Spotify, you just need to subscribe and get a lot of music legally. Some people may be still interested in CDs and Vinyls, but sometimes, we need something more easier to use. Some people may heard some good song in radio, television, or maybe pass by a street musician and hear some good songs that they don't know the title.</p>
 
-								<p>This program also detects which key that the song is being played, the tempo, and also give the details of the song. This include which album the song is included, the duration, release date,  </p>
+								<!-- Description (500 words) -->
+								<p>When the program started, the users can click on the voice recording chat to record manually or uploading a file containing the music. The file allowed only audio files, so if there is any video file, it should be converted to audio format first, then the users can upload the file. This program also detects which key that the song is being played, the tempo, and also give the details of the song. This include which album the song is included, the duration, release date, etc. The program may not be very accurate but will be improved over time to get the best result. </p>
+
+								<!-- Tools and Technologies (100 words) -->
+								<p>The program is </p>
+
+								<!-- Skills requires (100 words) -->
+								<p>Skills that is required is programming language, especially in Java. A basic knowledge of music theory is also needed to determine the specific note that is used for the music. The music could be referenced to wikipedia for detailed information, but preferable if has the detailed knowledge of the song. A high end system may be good for programming, but mid end is enough. Of course we need the microphone for testing, because it need to use voice recognition. </p>
+
+								<!-- Outcome (100 words) -->
+								<p>With this program released, hopefully people can be helped by running this program. I always thinking about this program should be implemented on most search engines, because it really useful. </p>
+
 
 								
 
