--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 								<p>The program is </p>
 
 								<!-- Skills requires (100 words) -->
-								<p>Skills that is required is programming language, especially in Java. A basic knowledge of music theory is also needed to determine the specific note that is used for the music. The music could be referenced to wikipedia for detailed information, but preferable if has the detailed knowledge of the song. A high end system may be good for programming, but mid end is enough. Of course we need the microphone for testing, because it need to use voice recognition. </p>
+								<p>Skills that is required is programming language, especially in Java. A basic knowledge of music theory is also needed to determine the specific note that is used for the music. The music could be referenced to wikipedia for detailed information, but preferable if has the detailed knowledge of the song. A high end system may be good for programming, but mid end is enough. Some mobile phones and tablet could be used for testing compatibilities in various devices. Of course we need the microphone for testing, because it need to use voice recognition. A good speaker also may be needed. </p>
 
 								<!-- Outcome (100 words) -->
 								<p>With this program released, hopefully people can be helped by running this program. I always thinking about this program should be implemented on most search engines, because it really useful. </p>
