--- a/index.html
+++ b/index.html
@@ -117,7 +117,11 @@
 								<p>Music is a product of an art that results in a form of sound. There are many genres of music in this world. Everybody loves music. Even you are not a musician, you still listen to music, when on the train, for studying, etc. In this era, it is easier to get music, for example is Spotify, you just need to subscribe and get a lot of music legally. Some people may be still interested in CDs and Vinyls, but sometimes, we need something more easier to use. Some people may heard some good song in radio, television, or maybe pass by a street musician and hear some good songs that they don't know the title.</p>
 
 								<!-- Description (500 words) -->
+								<p>The app is developed using Java and PHP. It receives the user input as an audio, converting the audio to be readable in the program, and then the program will search in the internet database that matches the input. </p>
+								
+								<p>The interface will use bright colours so it is easy to see. Using simple design and serif fonts for compatibility on various devices and browsers. </p>								
 								<p>When the program started, the users can click on the voice recording chat to record manually or uploading a file containing the music. The file allowed only audio files, so if there is any video file, it should be converted to audio format first, then the users can upload the file. This program also detects which key that the song is being played, the tempo, and also give the details of the song. This include which album the song is included, the duration, release date, etc. The program may not be very accurate but will be improved over time to get the best result. </p>
+
 
 								<!-- Tools and Technologies (100 words) -->
 								<p>The program is programmed using Java and PHP. Java is used in many software developments, especially mobile applications (Android).  I may use some musical instrument to test if the app can detect specific note. Guitar is preferred beacause it is easy to carry. Digital piano also may be used. We use Eclipse for Java IDE for Windows. For the PHP I use Sublime Text. I am using Windows computer to develop this program. Mobile phones and Tablet is also used for testing the program. Multiple browsers also needed because it is a web based application that search the information through the internet. </p>
