--- a/index.html
+++ b/index.html
@@ -118,9 +118,10 @@
 
 								<!-- Description (500 words) -->
 								<p>The app is developed using Java and PHP. It receives the user input as an audio, converting the audio to be readable in the program, and then the program will search in the internet database that matches the input. </p>
-								
-								<p>The interface will use bright colours so it is easy to see. Using simple design and serif fonts for compatibility on various devices and browsers. </p>								
+
+								<p>The interface will use bright colours so it is easy to see. Using simple design and serif fonts for compatibility on various devices and browsers. The help and documentation also will be provided to help users understand the program. </p>								
 								<p>When the program started, the users can click on the voice recording chat to record manually or uploading a file containing the music. The file allowed only audio files, so if there is any video file, it should be converted to audio format first, then the users can upload the file. This program also detects which key that the song is being played, the tempo, and also give the details of the song. This include which album the song is included, the duration, release date, etc. The program may not be very accurate but will be improved over time to get the best result. </p>
+
 
 
 								<!-- Tools and Technologies (100 words) -->
