--- a/index.html
+++ b/index.html
@@ -111,12 +111,15 @@
 							<article id="elements">
 								<h2 class="major">Project Ideas</h2> 
 								<!-- Overview (100 Words) -->
+								<h3>Overview</h3>
 								<p>I'm going to create a project called "Search by Music". It's a search engine, but to find a specific music. It will recognize the audio that being recorded and will find the music that match from the recording. It's almost similar with Search by Voice by Google, but it's more specific only for finding specific music that we heard but we don't know the song title. The program will be web based program that requires a browser to access. It will be availabe in the desktop, tablets, and mobile. By playing a few of notes or some lyrics, the program will detect the song and try to get the information of it.</p>
 
 								<!-- Motivation (100 words) -->
+								<h3>Motivation</h3>
 								<p>Music is a product of an art that results in a form of sound. There are many genres of music in this world. Everybody loves music. Even you are not a musician, you still listen to music, when on the train, for studying, etc. In this era, it is easier to get music, for example is Spotify, you just need to subscribe and get a lot of music legally. Some people may be still interested in CDs and Vinyls, but sometimes, we need something more easier to use. Some people may heard some good song in radio, television, or maybe pass by a street musician and hear some good songs that they don't know the title.</p>
 
 								<!-- Description (500 words) -->
+								<h3>Description</h3>
 								<p>The app is developed using Java and PHP. It receives the user input as an audio, converting the audio to be readable in the program, and then the program will search in the internet database that matches the input. </p>
 
 								<p>The interface will use bright colours so it is easy to see. Using simple design and serif fonts for compatibility on various devices and browsers. The help and documentation also will be provided to help users understand the program. </p>								
@@ -125,12 +128,15 @@
 
 
 								<!-- Tools and Technologies (100 words) -->
+								<h3>Tools and Technologies</h3>
 								<p>The program is programmed using Java and PHP. Java is used in many software developments, especially mobile applications (Android).  I may use some musical instrument to test if the app can detect specific note. Guitar is preferred beacause it is easy to carry. Digital piano also may be used. We use Eclipse for Java IDE for Windows. For the PHP I use Sublime Text. I am using Windows computer to develop this program. Mobile phones and Tablet is also used for testing the program. Multiple browsers also needed because it is a web based application that search the information through the internet. </p>
 
-								<!-- Skills requires (100 words) -->
+								<!-- Skills required (100 words) -->
+								<h3>Skills Required</h3>
 								<p>Skills that is required is programming language, especially in Java. A basic knowledge of music theory is also needed to determine the specific note that is used for the music. The music could be referenced to wikipedia for detailed information, but preferable if has the detailed knowledge of the song. A high end system may be good for programming, but mid end is enough. Some mobile phones and tablet could be used for testing compatibilities in various devices. Of course we need the microphone for testing, because it need to use voice recognition. A good speaker also may be needed. </p>
 
 								<!-- Outcome (100 words) -->
+								<h3>Outcome</h3>
 								<p>With this program released, hopefully people can be helped by running this program. I always thinking about this program should be implemented on most search engines, because it really useful. Searching music can be done more easily, if we know some lyrics it would not be a problem, but if we don’t know the lyrics or the song is instrumental only, this program may help a lot. The program will be updated regularly to check improve the quality, and for the best experience for user to use the program. I expected some feedback from the users to keep the app improving and give the best experience to the users.</p>
 
 
